# prototype-learning

./: .gitignore  LICENSE  README.md  pyproject.toml
checkpoints/Convnet/: epoch=1-val_acc=0.95.ckpt  last.ckpt
checkpoints/SimCLR/: epoch=35-val_acc_top1=0.86.ckpt  last.ckpt
docs/: training_stats.ipynb
logs/convnet/version_4/: metrics.csv
logs/simclr/version_5/: metrics.csv
logs/simclr/version_6/: hparams.yaml  metrics.csv
logs/simclr/version_7/: metrics.csv
src/: dataloaders.py  main.py  trainer.py
src/models/: dino.py  protonet.py  simclr.py
