[project]
name = "prototype-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "grad-cam>=1.5.5",
    "jupyterlab>=4.4.6",
    "legrad-torch>=1.1",
    "lightning>=2.5.4",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "numba>=0.60.0",
    "umap-learn>=0.5.9.post2",
    "transformers>=4.56.1",
    "accelerate>=1.10.1",
    "huggingface-hub[hf-xet]>=0.35.0rc0",
    "medmnist>=3.0.2",
    "seaborn>=0.13.2",
    "xformers>=0.0.32.post2",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
